tests/baselines/reference/vardecl(strict=true).errors.txt
vardecl.ts(11,13): error TS7005: Variable 'declaredVar' implicitly has an 'any' type.
vardecl.ts(12,13): error TS7005: Variable 'declareVar2' implicitly has an 'any' type.
vardecl.ts(14,13): error TS7005: Variable 'declaredVar3' implicitly has an 'any' type.
vardecl.ts(20,1): error TS2454: Variable 'complicatedArrayVar' is used before being assigned.
vardecl.ts(63,16): error TS7005: Variable 'a' implicitly has an 'any' type.
vardecl.ts(63,36): error TS7005: Variable 'b' implicitly has an 'any' type.
vardecl.ts(69,22): error TS7006: Parameter 'b' implicitly has an 'any' type.
vardecl.ts(74,22): error TS7006: Parameter 'b' implicitly has an 'any' type.
vardecl.ts(78,17): error TS7005: Variable 'd1' implicitly has an 'any' type.
vardecl.ts(78,21): error TS7005: Variable 'd2' implicitly has an 'any' type.
vardecl.ts(80,17): error TS7005: Variable 'v1' implicitly has an 'any' type.
vardecl.ts(81,16): error TS7005: Variable 'mE' implicitly has an 'any' type.
vardecl.ts(82,24): error TS7005: Variable 'd1E' implicitly has an 'any' type.
vardecl.ts(82,29): error TS7005: Variable 'd2E' implicitly has an 'any' type.
vardecl.ts(83,16): error TS7005: Variable 'b2E' implicitly has an 'any' type.
vardecl.ts(84,24): error TS7005: Variable 'v1E' implicitly has an 'any' type.
vardecl.ts(90,13): error TS7005: Variable 'da1' implicitly has an 'any' type.
vardecl.ts(90,18): error TS7005: Variable 'da2' implicitly has an 'any' type.
vardecl.ts(92,13): error TS7005: Variable 'dv1' implicitly has an 'any' type.
vardecl.ts(97,14): error TS7006: Parameter 'a2' implicitly has an 'any' type.


==== vardecl.ts (20 errors) ====
    var simpleVar;
    
    var anotherVar: any;
    var varWithSimpleType: number;
    var varWithArrayType: number[];
    
    var varWithInitialValue = 30;
    
    var withComplicatedValue = { x: 30, y: 70, desc: "position" };
    
    declare var declaredVar;
                ~~~~~~~~~~~
!!! error TS7005: Variable 'declaredVar' implicitly has an 'any' type.
    declare var declareVar2
                ~~~~~~~~~~~
!!! error TS7005: Variable 'declareVar2' implicitly has an 'any' type.
    
    declare var declaredVar3;
                ~~~~~~~~~~~~
!!! error TS7005: Variable 'declaredVar3' implicitly has an 'any' type.
    declare var deckareVarWithType: number;
    
    var arrayVar: string[] = ['a', 'b'];
    
    var complicatedArrayVar: { x: number; y: string; }[] ;
    complicatedArrayVar.push({ x: 30, y : 'hello world' });
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'complicatedArrayVar' is used before being assigned.
    
    var n1: { [s: string]: number; };
    
    var c : {
            new? (): any;
        }
    
    var d: {
        foo? (): {
            x: number;
        };
    }
    
    var d3: {
        foo(): {
            x: number;
            y: number;
        };
    }
    
    var d2: {
        foo (): {
            x: number;
        };
    }
    
    var n2: {
        (): void;
    }
    var n4: {
        (): void;
    }[];
    
    var d4: {
        foo(n: string, x: { x: number; y: number; }): {
            x: number;
            y: number;
        };
    }
    
    module m2 {
    
        export var a, b2: number = 10, b;
                   ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
                                       ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        var m1;
        var a2, b22: number = 10, b222;
        var m3;
    
        class C {
            constructor (public b) {
                         ~~~~~~~~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
            }
        }
    
        export class C2 {
            constructor (public b) {
                         ~~~~~~~~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
            }
        }
        var m;
        declare var d1, d2;
                    ~~
!!! error TS7005: Variable 'd1' implicitly has an 'any' type.
                        ~~
!!! error TS7005: Variable 'd2' implicitly has an 'any' type.
        var b23;
        declare var v1;
                    ~~
!!! error TS7005: Variable 'v1' implicitly has an 'any' type.
        export var mE;
                   ~~
!!! error TS7005: Variable 'mE' implicitly has an 'any' type.
        export declare var d1E, d2E;
                           ~~~
!!! error TS7005: Variable 'd1E' implicitly has an 'any' type.
                                ~~~
!!! error TS7005: Variable 'd2E' implicitly has an 'any' type.
        export var b2E;
                   ~~~
!!! error TS7005: Variable 'b2E' implicitly has an 'any' type.
        export declare var v1E;
                           ~~~
!!! error TS7005: Variable 'v1E' implicitly has an 'any' type.
    }
    
    var a22, b22 = 10, c22 = 30;
    var nn;
    
    declare var da1, da2;
                ~~~
!!! error TS7005: Variable 'da1' implicitly has an 'any' type.
                     ~~~
!!! error TS7005: Variable 'da2' implicitly has an 'any' type.
    var normalVar;
    declare var dv1;
                ~~~
!!! error TS7005: Variable 'dv1' implicitly has an 'any' type.
    var xl;
    var x;
    var z;
    
    function foo(a2) {
                 ~~
!!! error TS7006: Parameter 'a2' implicitly has an 'any' type.
        var a = 10;
    }
    
    for (var i = 0, j = 0; i < 10; i++) {
        j++;
    }
    
    
    for (var k = 0; k < 30; k++) {
        k++;
    }
    var b = 10;
    